create nav, create div, begin style

--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
     <title>Project-1</title>
   </head>
   <body>
-    <h1>Headline</h1>
+    <nav>
+      <section>
+        <div>ABOUT</div>
+        <div>ART</div>
+      </section>
+      <div>LEARN MORE</div>
+    </nav>
+    <main>
+      <div id="A">A</div>
+      <div id="B">B</div>
+      <div id="C">C</div>
+      <div id="D">D</div>
+      <div id="F">F</div>
+      <div id="G">G</div>
+      <div id="H">H</div>
+      <div id="I">I</div>
+      <div id="J">J</div>
+      <div id="K">K</div>
+      <div id="L">L</div>
+      <div id="M">M</div>
+      <div id="N">N</div>
+    </main>
   </body>
 </html>
