--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <div id="B">B</div>
       <div id="C">C</div>
       <div id="D">D</div>
+      <div id="E">E</div>
       <div id="F">F</div>
       <div id="G">G</div>
       <div id="H">H</div>
