--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div id="E"></div>
       <div id="F"></div>
       <div id="G"></div>
-      <div id="H">H</div>
+      <div id="H"></div>
       <div id="I">P M 30</div>
       <div id="J"></div>
       <div id="K"></div>
